# crypto-assets

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile
.github/workflows/: build.yml
assets/: index.html
src/: app_state.rs  auth.rs  main.rs  price_worker.rs  rate_limiter.rs  utils.rs
src/models/: mod.rs  models.rs  storage.rs
src/routers/: mod.rs  utils.rs
src/routers/allocations/: htmx.rs  methods.rs  mod.rs  rest.rs
src/routers/balances/: htmx.rs  methods.rs  mod.rs  rest.rs
src/routers/index/: mod.rs
src/routers/views/: htmx.rs  methods.rs  mod.rs  rest.rs
templates/: dashboard.html  index.html  landing.html  list_allocations.html  list_balances.html  row_allocation.html  row_balance.html  view_info.html  view_info_row.html
