[package]
name = "crypto-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.26"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["trace", "fs"]}
env_logger = "0.11.7"
serde_json = "1.0.140"
derive_builder = "0.20.2"
